Feat: Add OAuth2 API

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 	//spring security
 	implementation("org.springframework.boot:spring-boot-starter-security")
 	implementation("org.springframework.security:spring-security-test")
+	implementation 'org.springframework.security:spring-security-web' // Update this version
 
 	//spring security oauth2 cleint
 	implementation ("org.springframework.boot:spring-boot-starter-oauth2-client")
